tests/fail/stanza_too_short.stderr
error[E0597]: `stanza` does not live long enough
 --> src/tests/fail/stanza_too_short.rs:6:3
  |
4 |     let _a = {
  |         -- borrow later stored here
5 |         let stanza = Stanza::new();
  |             ------ binding `stanza` declared here
6 |         stanza.get_first_child()
  |         ^^^^^^ borrowed value does not live long enough
7 |     };
  |     - `stanza` dropped here while still borrowed
